--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     html.P (v ["desc"]))
                 )
             document <= html.ARTICLE (
-                (html.A (html.H3 ("Make Your Own Calculator"), href = "custom.html"),
+                (html.A (html.H3 ("Make Your Own Calculator"), href = "https://github.com/CyrilSLi/zeus-calc/blob/main/README.md#adding-new-calculators"),
                 html.P ("For all sorts of numerical problems in your life!")
             ))
         elif document.query.getfirst ("calc"):
